@@ -1,6 +1,6 @@
 Package: optimx
-Version: 2020-2.2
-Date: 2020-02-02
+Version: 2020-4.2
+Date: 2020-04-02
 Title: Expanded Replacement and Extension of the 'optim' Function
 Authors@R: c( person(given = c("John", "C"), family = "Nash", role =
     c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
@@ -27,4 +27,4 @@ NeedsCompilation: no
 Suggests: knitr, rmarkdown, setRNG, BB, ucminf, minqa, dfoptim,
         lbfgsb3c, lbfgs, subplex
 VignetteBuilder: knitr
-Packaged: 2020-02-07 13:51:17 UTC; john
+Packaged: 2020-04-02 22:18:54 UTC; john
